[gd_scene load_steps=3 format=3 uid="uid://cmbfrpn3bxic4"]

[ext_resource type="Texture2D" uid="uid://sejqv6mgcvnt" path="res://_mockup/Background1.png" id="1_gwck7"]
[ext_resource type="Script" path="res://_mockup/background.gd" id="1_kr4gc"]

[node name="Background" type="Node2D"]
script = ExtResource("1_kr4gc")

[node name="Sprite1" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("1_gwck7")
region_enabled = true
region_rect = Rect2(0, 0, 256, 288)

[node name="VOSNotifier1" type="VisibleOnScreenNotifier2D" parent="Sprite1"]
rect = Rect2(-128, -144, 256, 288)

[node name="Sprite2" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(256, 0)
texture = ExtResource("1_gwck7")
region_enabled = true
region_rect = Rect2(0, 0, 256, 288)

[node name="VOSNotifier2" type="VisibleOnScreenNotifier2D" parent="Sprite2"]
rect = Rect2(-128, -144, 256, 288)
